--- a/index.Rmd
+++ b/index.Rmd
@@ -22,7 +22,7 @@ library(tadaatoolbox)
 ```{r data, echo=FALSE, message=FALSE, warning=FALSE}
 
 # Load COVID-19 case data from Michigan state site
-download.file("https://www.michigan.gov/documents/coronavirus/Cases_and_Deaths_by_County_and_Date_2020-09-17_702628_7.xlsx", destfile="./rawData/Cases_by_County_and_Date.xlsx")
+download.file("https://www.michigan.gov/documents/coronavirus/Cases_by_County_and_Date_2020-09-21_702889_7.xlsx", destfile="./rawData/Cases_by_County_and_Date.xlsx")
 
 michiganData <- read_xlsx("./rawData/Cases_by_County_and_Date.xlsx")
 
@@ -141,7 +141,7 @@ weekly <- michiganTotalData %>% group_by(County, Week = week(Date)) %>% summaris
 This is an exploratory analysis of some COVID-19 trends in Michigan that interest me. I strongly suspect that the vast majority of cases and adverse outcomes are concentrated in the Detroit area. Our response as a state, however, has not really been defined geographically. This is probably not the best way to steward our limited resources (note for future microbial pandemics). I am also keenly interested in the impact that reopening college campuses will have on the overall trajectory of COVID-19 incidence in our region. You can [view this report](https://reproducibleassessment.com/Michigan-COVID/index.html) online. The data and all analyses performed can be accessed on [my GitHub repo](https://www.github.com/WeeBeasties/Michigan-COVID). Feel free to fork and use my repo.
 
 ## Data  
-One should always be a bit skeptical of analyses with pretty graphs and figures. It is important to know what data were used, how they were manipulated, and also the trustworthyness of the data sources. TheMichigan COVID-19 data for this document were obtained at https://www.michigan.gov/coronavirus/0,9753,7-406-98163_98173---,00.html in the Public Use Datasets called "Cases by County and Date". The **September 17, 2020** dataset was used to create this report. Michigan county populations were found at https://worldpopulationreview.com/us-counties/states/mi which gives the 2018 census numbers. These were the most recent reliable numbers that I could find at the moment.
+One should always be a bit skeptical of analyses with pretty graphs and figures. It is important to know what data were used, how they were manipulated, and also the trustworthyness of the data sources. TheMichigan COVID-19 data for this document were obtained at https://www.michigan.gov/coronavirus/0,9753,7-406-98163_98173---,00.html in the Public Use Datasets called "Cases by County and Date". The **September 21, 2020** dataset was used to create this report. Michigan county populations were found at https://worldpopulationreview.com/us-counties/states/mi which gives the 2018 census numbers. These were the most recent reliable numbers that I could find at the moment.
 
 ## Data munging
 The Michigan COVID-19 dataset had a few peculiarities that I need to deal with in order to analyze it easily. There were several "counties" that are not actual Michigan counties that needed to be cleaned. The values for "Out-of-State" are not relevant for my purposes and were removed from the analyses. Likewise, prison populations ("FCI" and "MDOC") cannot be ascribed to particular counties and were, therefore, also removed. Cases with "Unknown" origins were also removed. Finally, the dataset lists "City of Detroit" as a separate entity, those numbers were added back into it's home country (Wayne) to facilitate analysis.
@@ -326,15 +326,15 @@ As of September 17, Ferris State accounts for the vast majority of all reported 
 
 ```{r ferris, echo=FALSE, comment=FALSE, error=FALSE, warning=FALSE, message=FALSE, fig.width=12, fig.height=7, fig.cap="**Figure 8:** Total COVID-19 cases at Ferris State University since the beginning of the fall semester."}
 
-ferris_days <- c(4,12,19,23,24,25,26)
-ferris_cases <- c(4,19,53,82,84,88,98)
+ferris_days <- c(4,12,19,23,24,25,26,27,30)
+ferris_cases <- c(4,19,53,82,84,88,98,105,113)
 ferris_total <- tibble(Days=ferris_days, Cases=ferris_cases)
 
 fit <- glm(Cases ~ Days, data=ferris_total, family=poisson())
 
 ggplot(ferris_total, aes(x=Days, y=Cases)) +
   geom_point(size=3, color="black", fill="firebrick") +
-  stat_smooth(method="loess", se=FALSE,  color="firebrick", fill="firebrick", alpha=0.3) +
+  stat_smooth(method="loess", se=TRUE,  color="firebrick", fill="firebrick", alpha=0.3) +
   scale_y_log10(limits = c(1,500)) +
   annotation_logticks(sides = "l") +
   ylab("Log(Total COVID-19 Cases)") +
@@ -349,9 +349,9 @@ There appears to have been an exponential increase of COVID-19 cases on campus f
 ## Conclusions  
 
 * COVID-19 cases and deaths are not uniformly distributed across the state.
-* Metopolitan Detroit accounts for over 58% of all COVID-19 cases and 75% of all deaths.
-* After adjusting for county population, metropolitan Detroit counties have about 3-times more cases and 7-times more deaths than other Michigan countiues.
+* Metopolitan Detroit accounts for about 56% of all COVID-19 cases and 75% of all deaths.
+* After adjusting for county population, metropolitan Detroit counties have nearly 3-times more cases and 7-times more deaths than other Michigan countiues.
 * The difference between metropolitan Detroit and other counties is statistically significant.
-* The return of students to campus will coincide with an intial spike in COVID-19 cases. It will be interesting to see how well this spike can be controlled on campus.
+* The return of students to campus will coincide with an intial spike in COVID-19 cases. It will be interesting to see how well this spike can be controlled on campus. Campus appears to have had an exponential outbreak (albeit small) for the first few weeks. The cases appear to be plateauing after that.
 
 
