--- a/index.Rmd
+++ b/index.Rmd
@@ -217,11 +217,30 @@ my_t.test <- t.test(Deaths~Detroit, data=metroDataNorm)
 ```
 After normalizing for county population, metropolitan Detroit counties average `r round(normDataTable[2,2]/normDataTable[1,2],1)`-times more COVID-19 cases and `r round(normDataTable[2,4]/normDataTable[1,4],1)`-times more COVID-19 deaths than the rest of Michigan counties. On average, metropolitan Detroit (m = `r round(my_t.test$estimate[2],1)`) experienced significantly higher rates of COVID-19 deaths per 100,000 people than the rest of the state (m = `r round(my_t.test$estimate[1],1)`), *t*(`r round(my_t.test$parameter[1],2)`) = `r round(my_t.test$statistic[1],2)`, *p* < `r round(my_t.test$p.value,3)`.
 
+```{r by_county, echo=FALSE, message=FALSE, warning=FALSE, fig.width=10, fig.height=12, fig.cap="**Figure 3:** Normalized COVID-19 death rates by county (deaths per 100,000 people). The vertical line at 9.7 people per 100,000 is the annual traffic fatality rate for Michigan."}
+
+ggplot(metroDataNorm, aes(x=reorder(County, +Deaths), y=Deaths)) + 
+  geom_point(col="firebrick", size=3) +   # Draw points
+  geom_segment(aes(x=County, 
+                   xend=County, 
+                   y=min(Deaths), 
+                   yend=max(Deaths)), 
+               linetype="dashed", 
+               size=0.1) +
+  ylab("Deaths per 100,000 population") +
+  xlab("County") +
+  geom_hline(yintercept = 9.7, linetype=1) +
+  coord_flip() +
+  theme_bw()
+```
+
+Figure 3 highlights the fact that deaths per capita is not equal across all counties. Seven counties (including the Detroit metropolitan area) and much higher. Nearly three dozen counties have normalized COVID-19 death rates lower than that of car fatalities in the state. 
+
 ## Detroit vs everyone else
 
-Since the Detroit metropolitan area seems to be hit harder than the rest of the state, I wondered what the trends of cases and deaths looked like over time. Figure 3 shows the trends of total cases and deaths along with a five-day moving average of each. 
+Since the Detroit metropolitan area seems to be hit harder than the rest of the state, I wondered what the trends of cases and deaths looked like over time. Figure 4 shows the trends of total cases and deaths along with a five-day moving average of each. 
 
-```{r Detroit_plot, echo=FALSE, message=FALSE, warning=FALSE, fig.width=10, fig.height=10, fig.cap="**Figure 3:** A comparison of COVID-19 incidence between metropolitan Detroit (red) and the rest of Michigan (blue). The total state numbers are shown in green. Seven-day moving averages of the data are shown as dotted lines. The veritcal lines denote holidays: The 4th of July and Labor Day on September 7th."}
+```{r Detroit_plot, echo=FALSE, message=FALSE, warning=FALSE, fig.width=10, fig.height=10, fig.cap="**Figure 4:** A comparison of COVID-19 incidence between metropolitan Detroit (red) and the rest of Michigan (blue). The total state numbers are shown in green. Seven-day moving averages of the data are shown as dotted lines. The veritcal lines denote holidays: The 4th of July and Labor Day on September 7th."}
 
 plotA <- ggplot(compareDetroit) +
   geom_line(aes(x=Date, y=Cases, color=County)) +
@@ -261,9 +280,9 @@ The intial spike of COVID-19 cases appears to have spiked around the beginning o
 
 ## Comparing Isabella (Central Michigan University), Mecosta (Ferris State University) and Ottawa (Grand Valley State University) county cases  
 
-Finally, I am also interested in comparing how Ferris State University does in controlling COVID-19 compared to Central Michigan University and Grand Valley State University. Figure 4 compares the total number of COVID-19 cases between those three counties.
+Finally, I am also interested in comparing how Ferris State University does in controlling COVID-19 compared to Central Michigan University and Grand Valley State University. Figure 5 compares the total number of COVID-19 cases between those three counties.
 
-```{r county_plot, echo=FALSE, message=FALSE, warning=FALSE, fig.width=12, fig.height=7, fig.cap="**Figure 4:** A comparison of the number of total cases in Isabella, Mecosta, and Ottawa counties. The bars indicate total daily cases and the lines are seven-day moving averages. The vertical lines indicate the fourth of July, CMU opening on August 17th, and GVSU and FSU opening on August 31st, and Labor Day on September 7th."}
+```{r county_plot, echo=FALSE, message=FALSE, warning=FALSE, fig.width=12, fig.height=7, fig.cap="**Figure 5:** A comparison of the number of total cases in Isabella, Mecosta, and Ottawa counties. The bars indicate total daily cases and the lines are seven-day moving averages. The vertical lines indicate the fourth of July, CMU opening on August 17th, and GVSU and FSU opening on August 31st, and Labor Day on September 7th."}
 counties <- michiganTotalData %>% 
   filter(County == "isabella" | County == "mecosta" | County == "ottawa")
 ggplot(counties, aes(x=Date, y=Cases, color=County, fill=County)) +
@@ -280,7 +299,7 @@ ggplot(counties, aes(x=Date, y=Cases, color=County, fill=County)) +
         axis.title=element_text(size=18,face="bold"))
 ```
 
-```{r weekly_county_plot, echo=FALSE, message=FALSE, warning=FALSE, fig.width=12, fig.height=7, fig.cap="**Figure 5:** A comparison of the number of total cases in Isabella, Mecosta, and Ottawa counties by week. The bars indicate total daily cases and the lines are four-week moving averages." }
+```{r weekly_county_plot, echo=FALSE, message=FALSE, warning=FALSE, fig.width=12, fig.height=7, fig.cap="**Figure 6:** A comparison of the number of total cases in Isabella, Mecosta, and Ottawa counties by week. The bars indicate total daily cases and the lines are four-week moving averages." }
 counties <- weekly %>% 
   filter(County == "isabella" | County == "mecosta" | County == "ottawa")
 ggplot(counties, aes(x=Week, y=Weekly.Cases, color=County, fill=County)) +
@@ -297,7 +316,7 @@ ggplot(counties, aes(x=Week, y=Weekly.Cases, color=County, fill=County)) +
 
 CMU students went back to school earlier than Ferris students. It appears that this influx of students (and increased testing on campus) resulted in a spike of cases. It will be interesting to see how big of a spike Mecosta county experiences over the next few weeks. CMU is twice as large as Ferris, but has 10-times more COVID-19 cases. This probably reflects the fact that they recruit more strongly from counties with a higher endemic COVID-19 rate (near Detroit). Ferris, on the other hand, is primarily a regional institution and the counties that it draws most of its students from have lower overall COVID-19 infection rates. This is one time when living in the sticks has tangible upsides. Here is Ferris by itself to expand the y-axis a little bit.
 
-```{r ferris_plot, echo=FALSE, message=FALSE, warning=FALSE, fig.width=12, fig.height=7, fig.cap="**Figure 6:** Mecosta cases (which includes Ferris State University). The bars indicate total daily cases and the lines are seven-day moving averages. The vertical lines indicate the fourth of July, FSU opening on August 31st, and Labor Day."}
+```{r ferris_plot, echo=FALSE, message=FALSE, warning=FALSE, fig.width=12, fig.height=7, fig.cap="**Figure 7:** Mecosta cases (which includes Ferris State University). The bars indicate total daily cases and the lines are seven-day moving averages. The vertical lines indicate the fourth of July, FSU opening on August 31st, and Labor Day."}
 mecosta_county <- michiganTotalData %>% 
   filter(County == "mecosta")
 ggplot(mecosta_county, aes(x=Date, y=Cases, color=County, fill=County)) +
@@ -315,7 +334,7 @@ ggplot(mecosta_county, aes(x=Date, y=Cases, color=County, fill=County)) +
 
 For comparision sake, here are the numbers of positive COVID-19 cases being reported on the [Ferris COVID dashboard page](https://www.ferris.edu/HTMLS/news/coronavirus/covid-19-dashboard.htm).
 
-```{r dashboard, echo=FALSE, comment=FALSE, error=FALSE, warning=FALSE, fig.width=12, fig.height=7, fig.cap="**Figure 7:** Total number of COVID-19 cases. Ferris reports its numbers every Thursday and began collecting data on August 21. The state-reported numbers for Mecosta county are shown for the same intervals."}
+```{r dashboard, echo=FALSE, comment=FALSE, error=FALSE, warning=FALSE, fig.width=12, fig.height=8, fig.cap="**Figure 8:** Total number of COVID-19 cases. Ferris reports its numbers every Thursday and began collecting data on August 21. The state-reported numbers for Mecosta county are shown for the same intervals."}
 dates <- c("08/24-8/27", "08/28-09/03", "09/04-09/10","9/11-9/17","9/18-9/24")
 week1 <- as.integer(michiganTotalData %>%  filter(County == "mecosta", Date >= "2020-08-24" & Date <= "2020-08-27") %>% summarize(sum(Cases)))
 week2 <- as.integer(michiganTotalData %>%  filter(County == "mecosta", Date >= "2020-08-28" & Date <= "2020-09-03") %>% summarize(sum(Cases)))
@@ -339,7 +358,7 @@ ggplot(plotData, aes(x=Date, y=Cases, fill=Source)) +
 
 As of September 17, Ferris State accounts for the vast majority of all reported cases in Mecosta county. There does not yet appear to be a community-associated outbreak at this point. The Mecosta county numbers often take several days to get processed and reported. It is sort of weird, though, that the Ferris numbers no longer seem to be reflected in the county data. We will see if the numbers now begin to decline or if COVID-19 moves from campus out into the general population.
 
-```{r ferris, echo=FALSE, comment=FALSE, error=FALSE, warning=FALSE, message=FALSE, fig.width=12, fig.height=7, fig.cap="**Figure 8:** Total COVID-19 cases at Ferris State University since the beginning of the fall semester."}
+```{r ferris, echo=FALSE, comment=FALSE, error=FALSE, warning=FALSE, message=FALSE, fig.width=12, fig.height=7, fig.cap="**Figure 9:** Total COVID-19 cases at Ferris State University since the beginning of the fall semester."}
 
 ferris_days <- c(4,11,18,22,23,24,25,26,29,30,31)
 ferris_cases <- c(4,19,53,82,84,88,98,105,113,114,116)
